--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.3.4
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.3
 djangorestframework==3.12.4
-Pillow==8.2.0
+idna==2.10
+packaging==20.9
+pygeocoder==1.2.5
+pyparsing==2.4.7
 pytz==2021.1
+requests==2.25.1
 sqlparse==0.4.1
+urllib3==1.26.6
